# Minimax-Mini-Agent

./: .gitignore  ATOMIC_MEMORY_IMPLEMENTATION.md  ATOMIC_MODE_ACTIVE.md  HYDRATE_ALL_SESSIONS.md  README.md  RESTART_INTO_ATOMIC.md  TOKEN_LIMIT_FIX.md  mcp_integration_plan.md  pyproject.toml  test_atomic_memory.py
controlplane/pipecat-voice/rust/nova-hermes-nats-bridge/: Cargo.toml  README.md
controlplane/pipecat-voice/rust/nova-hermes-nats-bridge/src/: main.rs
controlplane/pipecat-voice/rust/nova-voice-provider-core/: Cargo.toml  README.md
controlplane/pipecat-voice/rust/nova-voice-provider-core/src/: lib.rs
controlplane/pipecat-voice/swift-brane/agent/: Cargo.toml
controlplane/pipecat-voice/swift-brane/agent/src/: envelope.rs  host_functions.rs  main.rs  tool_interface.rs
core_infra/: nats_client.py
docs/: DEEPER_LESSONS_LEARNED.md  LESSONS_LEARNED.md  TOKEN_LIMIT_UPDATE.md
mini_agent/: agent.py  cli.py  config.py  test_atomic_integration.py
novainfra/: ops_history.md
ops/: 251219_1903_core_novathreads_strategic_assessment_chase.md  251219_1918_core_bridge_completion_novathreads_pivot_status_chase.md  251219_1931_core_bridge_excellence_novathreads_on_track_chase.md  251219_1940_core_organizational_correction_novathreads_developer.md  251219_1945_core_organizational_evolution_summary_chase.md  251219_1948_core_novops_organizational_tree_complete.md  251219_1948_core_novops_organizational_tree_visual_summary.md  251219_2007_core_bridge_promotion_novainfra_lead_critical_mission.md  251219_2007_core_bridge_promotion_summary_chase.md  251219_2018_core_bridge_promotion_corrected_structure_team_empowerment.md  251219_2018_core_bridge_promotion_corrected_summary_chase.md  251219_2022_core_priority_sequence_corrected_high_level_oversight.md  251219_2022_core_priority_sequence_corrected_summary_chase.md  251219_2025_core_bridge_document_reference_guide.md  251219_2048_core_bridge_document_reference_guide.md  251219_2051_core_communication_status_assessment.md  251219_2051_core_communication_status_check_summary.md  251219_2105_core_bridge_realtime_communication_breakthrough.md  251219_2105_core_human_bottleneck_eliminated_realtime_communication.md  251219_2121_core_nats_status_check_realtime_communication.md  251219_2124_core_nats_status_report_realtime_communication.md  251219_2127_core_bridge_communication_gap_verification_request.md  251219_2127_core_communication_gap_identified_nats_issues.md  251219_2132_core_bridge_test_response_not_received_communication_gap.md  251219_2135_core_final_communication_gap_status.md  251219_2137_core_bridge_strategic_analysis_review_approved.md  251219_2137_core_strategy_approval_bridge_hybrid_integration.md  251219_2150_bridge_core_communication_resolution.md  251219_2238_core_bridge_strategic_analysis_response_quality_first.md  (+42 more)
services/: bridge_test.py  (+1 more)
(+425 files in other folders)
