[package]
name = "nova-hermes-nats-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust NATS subject owner for Nova Hermes profiles"
license = "MIT"

[dependencies]
anyhow = "1"
async-nats = "0.38"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
