[package]
name = "nova-hermes-nats-bridge"
version = "0.2.0"
edition = "2021"
description = "Multi-agent Rust NATS bridge for Nova Hermes profiles — API push delivery with ping-pong loop protection"
license = "MIT"

[dependencies]
anyhow = "1"
async-nats = "0.38"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
