[package]
name = "nova-voice-provider-core"
version = "0.1.0"
edition = "2021"
description = "Rust voice provider contract for Nova CommsOps"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
