[package]
name = "swift-brane-agent"
version = "0.1.0"
edition = "2021"
description = "Swift Brane Agent — ADR-002 envelope shim + host function provider for wasm64 tools"

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49.0"
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }

[[bin]]
name = "swift-brane-agent"
path = "src/main.rs"
